@@ -4,7 +4,6 @@ import dev.rosewood.rosegarden.RosePlugin;
 import dev.rosewood.rosegarden.command.framework.RoseCommandWrapper;
 import dev.rosewood.rosegarden.manager.AbstractCommandManager;
 import dev.rosewood.roseloot.command.LootCommandWrapper;
-import java.util.Collections;
 import java.util.List;
 
 public class CommandManager extends AbstractCommandManager {
@@ -15,12 +14,12 @@ public class CommandManager extends AbstractCommandManager {
 
     @Override
     public List<Class<? extends RoseCommandWrapper>> getRootCommands() {
-        return Collections.singletonList(LootCommandWrapper.class);
+        return List.of(LootCommandWrapper.class);
     }
 
     @Override
     public List<String> getArgumentHandlerPackages() {
-        return Collections.singletonList("dev.rosewood.roseloot.command.argument");
+        return List.of("dev.rosewood.roseloot.command.argument");
     }
 
 }
