@@ -4,7 +4,6 @@ import dev.rosewood.rosegarden.RosePlugin;
 import dev.rosewood.rosegarden.locale.Locale;
 import dev.rosewood.rosegarden.manager.AbstractLocaleManager;
 import dev.rosewood.roseloot.locale.EnglishLocale;
-import java.util.Collections;
 import java.util.List;
 
 public class LocaleManager extends AbstractLocaleManager {
@@ -15,7 +14,7 @@ public class LocaleManager extends AbstractLocaleManager {
 
     @Override
     public List<Locale> getLocales() {
-        return Collections.singletonList(
+        return List.of(
                 new EnglishLocale()
         );
     }
